# BehaviorNet

./: .clang-tidy  .gitignore  .gitmodules  CLAUDE.md  LICENSE  MODULE.bazel  README.md  WORKSPACE
.github/workflows/: ci.yml
design/: BLOG_INFO.md  MARKET_STRATEGY.md  PROJECT.md  places.json  supported_places.json
design/usecases/: autonomous_warehouse.json  autonomous_warehouse.md  car_wash.md  electrical_vehicle_chargers.md  factory_floor_orchestration.json  factory_floor_orchestration.md  multi_agv_coordination.json  multi_agv_coordination.md
examples/data_aggregation/: BUILD.bazel  README.md  config.json  main.cpp  test.cpp
examples/robot_picking/: BUILD.bazel  README.md  config.json  main.cpp  robot_actors.hpp  server.cpp  test.cpp
gui/: index.html  package-lock.json  package.json
gui/src/: App.tsx
gui/src/components/Canvas/: NetCanvas.tsx  PlaceNode.tsx  TransitionNode.tsx
gui/src/components/Inspector/: Inspector.tsx  PlaceInspector.tsx  TransitionInspector.tsx
gui/src/components/Sidebar/: ActorRegistry.tsx  Sidebar.tsx
gui/src/components/Toolbar/: Toolbar.tsx
gui/src/store/: netStore.ts  placeConfig.ts  types.ts
gui/src/styles/: index.css
gui/src/utils/: configExport.ts  configImport.ts
runtime/: BUILD.bazel
runtime/examples/: warehouse_actors.hpp
runtime/include/bnet/: ActionResult.hpp  Actor.hpp  Error.hpp  Registry.hpp  Token.hpp  bnet.hpp
runtime/include/bnet/actions/: ConditionAction.hpp  DelayAction.hpp
runtime/include/bnet/actors/: DataStoreActor.hpp  HttpActor.hpp
runtime/include/bnet/config/: ConfigParser.hpp  ConfigTypes.hpp
runtime/include/bnet/core/: Arc.hpp  Net.hpp  Place.hpp  TokenQueue.hpp  Transition.hpp
runtime/include/bnet/execution/: ActionContext.hpp  ActionExecutor.hpp  RetryPolicy.hpp
runtime/include/bnet/places/: ActionPlace.hpp  EntrypointPlace.hpp  ExitLoggerPlace.hpp  PlaceType.hpp  PlainPlace.hpp  ResourcePoolPlace.hpp  WaitWithTimeoutPlace.hpp
runtime/include/bnet/runtime/: RuntimeController.hpp
runtime/include/bnet/server/: WebSocketServer.hpp
runtime/include/bnet/service/: HttpService.hpp
runtime/include/bnet/testing/: TestHttpServer.hpp
runtime/src/: ActionResult.cpp  Error.cpp
runtime/src/actions/: ConditionAction.cpp  DelayAction.cpp
runtime/src/actors/: DataStoreActor.cpp  HttpActor.cpp
runtime/src/config/: ConfigParser.cpp
runtime/src/core/: Arc.cpp  Net.cpp  Place.cpp  TokenQueue.cpp  Transition.cpp
runtime/src/execution/: ActionContext.cpp  ActionExecutor.cpp
runtime/src/places/: ActionPlace.cpp  EntrypointPlace.cpp  ExitLoggerPlace.cpp  ResourcePoolPlace.cpp  WaitWithTimeoutPlace.cpp
runtime/src/runtime/: RuntimeController.cpp
runtime/src/server/: WebSocketServer.cpp
runtime/src/service/: HttpService.cpp
runtime/src/testing/: TestHttpServer.cpp
runtime/test/: api_test.cpp
runtime/test/actions/: actions_test.cpp
runtime/test/actors/: actors_test.cpp
runtime/test/config/: config_test.cpp
runtime/test/core/: core_test.cpp
runtime/test/execution/: execution_test.cpp
runtime/test/places/: places_test.cpp
runtime/test/runtime/: runtime_test.cpp
runtime/test/service/: service_test.cpp
runtime/test/testing/: testing_test.cpp
